added generated code through file yml, and security implementations
